# RecSys_Course_AT_PoliMi

./: Makefile  pyproject.toml  requirements.txt
Data_manager/: DataReader.py  DataReader_utils.py  DataSplitter.py  DataSplitter_Holdout.py  DataSplitter_leave_k_out.py  Dataset.py  DatasetMapperManager.py  IncrementalSparseMatrix.py  TagPreprocessing.py  __init__.py  data_consistency_check.py  run_clean_split_data_files.py
Data_manager/Movielens/: Movielens100KReader.py  Movielens10MReader.py  Movielens1MReader.py  Movielens20MReader.py  MovielensHetrec2011Reader.py  _utils_movielens_parser.py
Data_manager/split_functions/: split_train_validation_cold_items.py  split_train_validation_leave_k_out.py  split_train_validation_random_holdout.py
Evaluation/: Evaluator.py  metrics.py
HyperparameterTuning/: SearchAbstractClass.py  SearchBayesianSkopt.py  SearchSingleCase.py
Recommenders/: BaseMatrixFactorizationRecommender.py  BaseRecommender.py  BaseSimilarityMatrixRecommender.py  BaseTempFolder.py  DataIO.py  IR_feature_weighting.py  Incremental_Training_Early_Stopping.py  Recommender_utils.py
Recommenders/EASE/: EASE_Recommender.py
Recommenders/MatrixFactorization/: IALSRecommender.py  NMFRecommender.py  PureSVDRecommender.py  SVDFeatureRecommender.py
Recommenders/MatrixFactorization/PyTorch/: MF_MSE_PyTorch.py  MF_MSE_PyTorch_model.py
Recommenders/SLIM/: SLIMElasticNetRecommender.py  SLIM_BPR_Python.py
Utils/: seconds_to_biggest_unit.py
